--- a/project_1/index.html
+++ b/project_1/index.html
@@ -185,6 +185,7 @@
                                                     <h3 style="font-weight: normal; font-size: 22px;">
                                                         The Almighty Pallete Knife
                                                     </h3>
+                                                    <img src="https://cdn11.bigcommerce.com/s-3svqmxmj8l/images/stencil/100x100/products/2621/3846/Bob_Ross_10_Painting_Knife-CU__60149.1656603443.jpg?c=2" alt="Pallete Knife">
                                                 </td>
                                             </tr>
                                         </table>
@@ -192,10 +193,11 @@
                                         <table align="right" border="0" cellpadding="0" cellspacing="0"
                                             role="presentation" width="33%" class="block">
                                             <tr>
-                                                <td id="2-inch-brush">
+                                                <td id="fan-brush">
                                                     <h3 style="font-weight: normal; font-size: 22px;">
                                                         #6 fan brush
                                                     </h3>
+                                                    <img src="https://cdn11.bigcommerce.com/s-3svqmxmj8l/images/stencil/100x100/products/1872/3831/Bob_Ross_6_Fan_Blender-CU__40142.1656602820.jpg?c=2" alt="">
                                                 </td>
                                             </tr>
                                         </table>
@@ -203,10 +205,11 @@
                                         <table align="right" border="0" cellpadding="0" cellspacing="0"
                                             role="presentation" width="33%" class="block">
                                             <tr>
-                                                <td>
+                                                <td id="2-inch-brush">
                                                     <h3 style="font-weight: normal; font-size: 22px;">
                                                         the 2" brush
                                                     </h3>
+                                                    <img src="https://cdn11.bigcommerce.com/s-3svqmxmj8l/images/stencil/100x100/products/1787/3839/Bob_Ross_2in_Background_Brush-CU__54096.1656603202.jpg?c=2" alt="two inch brush">
                                                 </td>
                                             </tr>
                                         </table>
@@ -247,11 +250,11 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>
+                            <p style="font-size: 16px;">
                                 we're pleased to announce that we will be having a painting seminar in your area. please
                                 click the link below to reserve your spot
-                            </p>
-                            <p>
+                            </p >
+                            <p style="font-size: 16px;">
                                 take a look at what some of our fantastic friends, like you, have made
                             </p>
                         </td>
@@ -266,25 +269,23 @@
                             
                             <!--labels-->
                             <label class="slide-label" for="slide1" style="border:2px solid black; display: inline-block; margin: 10; padding: 15px 30px;">
-                                slide 1
+                                Audrey Golden
                             </label>
                             <label class="slide-label" for="slide2" style="border:2px solid black; display: inline-block; margin: 10; padding:15px 30px;">
-                                slide 2
+                                Steve Ross
                             </label>
                             <label class="slide-label" for="slide3" style="border:2px solid black; display: inline-block; margin: 10; padding:15px 30px;">
-                                slide 3
+                                Dorothy Dent
                             </label>
                             <!--content-->
-                            <div class="slide slide1">
-                                <p>Audrey Golden</p>
+                            <div class="slide slide1" style="margin-top: 10px;">
                                 <img src="https://www.twoinchbrush.com/images/painting235.webp" alt="Ocean Sunrise">
                             </div>
-                            <div class="slide slide2">
-                               <p>Steve Ross</p>
+                            <div class="slide slide2" style="margin-top: 10px;">
+                               
                                 <img src="https://www.twoinchbrush.com/images/painting325.webp" alt="Summer in the Mountain">
                             </div>
-                            <div class="slide slide3">
-                                <p>Dorothy Dent</p>
+                            <div class="slide slide3" style="margin-top: 10px;">
                                 <img src="https://www.twoinchbrush.com/images/painting246.webp" alt="Winter Sawscape">
                             </div>
                         </td>
