swaps order of 2 column and 3 column layout

--- a/project_1/index.html
+++ b/project_1/index.html
@@ -139,21 +139,20 @@
                     </tr>
                     <!--hero image-->
                     <tr>
-                        <td align="center"
-                            background="https://image.pbs.org/contentchannels/DQhaEaX-background-1U3qFyO.png?focalcrop=1200x630x50x10&format=auto"
-                            bgcolor="#000b16" style="
-                  background: url('https://image.pbs.org/contentchannels/DQhaEaX-background-1U3qFyO.png?focalcrop=1200x630x50x10&format=auto');
-                  background-position: center;
-                  background-size: cover;
-                  background-repeat: no-repeat;
-                  background-color:#000b16;
-                  padding: 0 4px;
+                        <td align="center" background="https://image.pbs.org/contentchannels/DQhaEaX-background-1U3qFyO.png?focalcrop=1200x630x50x10&format=auto" bgcolor="#000b16" 
+                        style="
+                            background: url('https://image.pbs.org/contentchannels/DQhaEaX-background-1U3qFyO.png?focalcrop=1200x630x50x10&format=auto');
+                            background-position: center;
+                            background-size: cover;
+                            background-repeat: no-repeat;
+                            background-color:#000b16;
+                            padding: 0 4px;
                 ">
                             <h2 style="
-                    color: #fff;
-                    text-align: center;
-                    font-size: 48px;
-                    font-weight: normal;
+                                    color: #fff;
+                                    text-align: center;
+                                    font-size: 48px;
+                                    font-weight: normal;
                   ">
                                 you've been invited to experience the joy of painting
                             </h2>
@@ -168,6 +167,42 @@
                             <h2 style="font-size: 28px; font-weight: normal">
                                 What you'll learn . . .
                             </h2>
+                        </td>
+                    </tr>
+
+                    <tr id="2-column">
+                        <td>
+                            <!-- 2 column root table -->
+                            <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%"
+                                class="block">
+                                <tr>
+                                    <td>
+                                        <!-- left table-->
+                                        <table role="presentation" align="left" border="0" cellpadding="0"
+                                            cellspacing="0" width="48%" class="block">
+                                            <tr>
+                                                <td>
+                                                    <h2 style="font-weight: normal; font-style: italic;">We don't make mistakes</h2>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- right table-->
+                                        <table role="presentation" align="right" border="0" cellpadding="0"
+                                            cellspacing="0" width="48%">
+                                            <tr>
+                                                <td>
+                                                    <h2 style="font-weight: normal; font-style: italic;">We Have Happy Accidents</h2>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p> here are some of the tools the seminar will be practicing with</p>
                         </td>
                     </tr>
                     <!-- three column section-->
@@ -216,36 +251,6 @@
                                     </td>
                                 </tr>
                             </table> <!--  end root table 3 column  section -->
-                        </td>
-                    </tr>
-                    <tr id="2-column">
-                        <td>
-                            <!-- 2 column root table -->
-                            <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%"
-                                class="block">
-                                <tr>
-                                    <td>
-                                        <!-- left table-->
-                                        <table role="presentation" align="left" border="0" cellpadding="0"
-                                            cellspacing="0" width="48%" class="block">
-                                            <tr>
-                                                <td>
-                                                    <h2 style="font-weight: normal;">We don't make mistakes</h2>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                        <!-- right table-->
-                                        <table role="presentation" align="right" border="0" cellpadding="0"
-                                            cellspacing="0" width="48%">
-                                            <tr>
-                                                <td>
-                                                    <h2 style="font-weight: normal;">We Have Happy Accidents</h2>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
                         </td>
                     </tr>
                     <tr>
