--- a/project_1/index.html
+++ b/project_1/index.html
@@ -252,7 +252,8 @@
                                 <tr>
                                     <td>
                                         <!-- left table -->
-                                        <table border="0" align="left" cellpadding="0" cellspacing="0"
+                                        <!-- wanted align to be left but it causes a gap between the photos-->
+                                        <table border="0" align="right" cellpadding="0" cellspacing="0"
                                             role="presentation" width="33%" class="block">
                                             <tr>
                                                 <td id="pallete-knife" align="center">
