adds the proper ordering to the final row

--- a/hmwrk_3/index.html
+++ b/hmwrk_3/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Doggos</title>
+  <title>Bob Ross Art Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="style.css">
@@ -50,63 +50,66 @@
     <!-- row 2, 2 boxes spanning 2 rows -->
     <div class="row">
       <article class="col-2">
-        <h3>Yoda</h3>
-        <img src="https://placedog.net/250/166/?id=9" alt="Yoda doggo">
-        <p>Dachshund german shephard doberman pinscher leash lab dog bone dog bone roll over dachshund. Chihuahua chew
-          toy down great dance english mastiff poodle tug dog toy greyhound. Doberman pinscher tug dog house poodle shih
-          tzu sit pretty chew toy stay, bell pug shake dog house poodle k9.</p>
-        <p><a href="https://www.laanimalservices.com/adopt/" target="_blank">Read more &gt;&gt;</a></p>
+        <h3>Secluded beach</h3>
+        <img src="https://www.twoinchbrush.com/images/painting91.webp" alt="high tide">
+        <p> a nice seascape with a mountain overview</p>
+        <p><a href="https://www.twoinchbrush.com/painting/high-tide" target="_blank">Read more &gt;&gt;</a></p>
       </article>
       <article class="col-2">
-        <h3>Whiskey</h3>
-        <img src="https://placedog.net/250/166/?id=10" alt="Whiskey doggo">
-        <p>English mastiff play dead english mastiff, dog bulldog bulldog release heel bell bark bulldog. Poodle collar
-          doberman pinscher dog toy dog toy come puppy leave it chow chow. Down husky dog toy, shake fetch greyhound
-          shake poodle chihuahua puppies.</p>
-        <p><a href="https://www.laanimalservices.com/adopt/" target="_blank">Read more &gt;&gt;</a></p>
+        <h3>Surfs up</h3>
+        <img src="https://www.twoinchbrush.com/images/painting178.webp" alt="surfs up">
+        <p>another nice seascape painting</p>
+        <p><a href="https://www.twoinchbrush.com/painting/surfs-up" target="_blank">Read more &gt;&gt;</a></p>
       </article>
     </div>
     <!-- row 3: narrow left column, wide right/content column -->
     <div class="row">
-      <article class="col-33">
-        <h3>
-          Bowser
-        </h3>
-        <img src="" alt="bowser">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab possimus accusantium, voluptas doloribus nam
-          repellat nisi voluptate maiores tempore ad labore, commodi, dicta architecto.</p>
+      <article class="col-third">
+        <h3> Wetlands </h3>
+        <img src="https://www.twoinchbrush.com/images/painting250.webp" alt="wetlands">
+        <p>an interesting change from mountains and woods</p>
       </article>
-      <article class="col-66">
-        <h3>June</h3>
+      <article class="col-3">
+        <h3>shades of grey</h3>
+        <img src="https://www.twoinchbrush.com/images/painting272.webp" alt="shades of grey">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia molestias similique, minus voluptate cum
-          pariatur aliquid alias provident? A repudiandae sint porro vitae qui?
+          Ross made this painting at the behest of a man who claimed he could never paint because he was color blind. As the title of the piece suggests,
+          shades of grey only features grey tones. 
         </p>
+        <p><a href="https://www.twoinchbrush.com/painting/shades-of-grey" target="_blank">Read more &gt;&gt;</a></p>
+
       </article>
     </div>
     <!-- row 4: one column -->
     <div class="row">
-      <article class="col-100">
-        <h3> Rocky</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates doloribus culpa impedit sit nisi
-          asperiores earum dolorum sunt eligendi nihil molestias non sequi omnis illo quam qui, adipisci, tempore dolore
-          sint fugiat laudantium? Esse pariatur ipsam incidunt aut illo quos reiciendis doloribus, animi totam fuga,
-          inventore ut necessitatibus?</p>
+      <article class="col-4">
+        <h3> Western Expanse</h3>
+        <img src="https://www.twoinchbrush.com/images/painting227.webp" alt="wester expanse">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ex totam exercitationem numquam ad iusto dolore repellat, incidunt molestiae nesciunt, nam asperiores. Nisi dolorum velit maxime sunt voluptatum aliquid libero dolore tenetur fugiat molestiae, quasi labore exercitationem dolor, veritatis quaerat perferendis voluptate!</p>
+        <p><a href="https://www.twoinchbrush.com/painting/western-expanse" target="_blank">Read more &gt;&gt;</a></p>
+
       </article>
     </div>
     <!-- row 5, 1-2-1 individual boxes -->
     <div class="row">
       <article class="col-1">
-        <h3>marsupial wonder</h3>
+        <h3>Serenity</h3>
+        <img src="https://www.twoinchbrush.com/images/painting20.webp" alt="Serenity">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem cum enim possimus! Rerum assumenda perferendis vitae possimus inventore et incidunt ipsum doloremque facilis nemo?</p>
+        <p><a href="https://www.twoinchbrush.com/painting/serenity" target="_blank">Read more &gt;&gt;</a></p>
       </article>
-      <article class="col-2">
-        <h3>reptilian sprazal</h3>
+      <article class="col-half">
+        <h3>Under Pastel Skies</h3>
+        <img src="https://www.twoinchbrush.com/images/painting362.webp" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque optio, facere temporibus quibusdam quae, quaerat voluptate numquam consequatur a id corrupti asperiores fugiat? Numquam veniam rem aliquid tempore officia minima error est?</p>
+        <p><a href="https://www.twoinchbrush.com/painting/under-pastel-skies" target="_blank">Read more &gt;&gt;</a></p>
       </article>
       <article class="col-1">
-        <h3>where's it at?</h3>
+        <h3>Rolling Hills</h3>
+        <img src="https://www.twoinchbrush.com/images/painting124.webp" alt="Rolling Hills">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit laboriosam, maiores et animi modi quo est minima, eveniet, aut fugit reprehenderit tempora facere atque!</p>
+        <p><a href="https://www.twoinchbrush.com/painting/rolling-hills" target="_blank">Read more &gt;&gt;</a></p>
+        
       </article>
     </div>
   </div>
