adds color palette section as the final row

--- a/hmwrk_3/index.html
+++ b/hmwrk_3/index.html
@@ -109,8 +109,51 @@
         <img src="https://www.twoinchbrush.com/images/painting124.webp" alt="Rolling Hills">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit laboriosam, maiores et animi modi quo est minima, eveniet, aut fugit reprehenderit tempora facere atque!</p>
         <p><a href="https://www.twoinchbrush.com/painting/rolling-hills" target="_blank">Read more &gt;&gt;</a></p>
-        
       </article>
+    </div>
+    <h2 id="color-palette">Colors Used For These Paintings</h2>
+    <div class="row">
+        <div class="color-item col-12" id="AC">
+          <h3 style="font-size: large;">Alizarin Crimson</h3>
+        </div>
+        <div class="color-item col-12" id="BR">
+          <h3>Bright Red</h3>
+        </div>
+        <div class="color-item col-12" id="CY">
+          <h3>Cad Yellow</h3>
+        </div>
+        <div class="color-item col-12" id="YO">
+          <h3>Yellow Ochre</h3>
+        </div>
+
+        <div class="color-item col-12" id="IY">
+          <h3>Indian Yellow</h3>
+        </div>
+        <div class="color-item col-12" id="PB">
+          <h3>Pthalo Blue</h3>
+        </div>
+        <div class="color-item col-12" id="PG">
+          <h3>Pthalo Green</h3>
+        </div>
+        <div class="color-item col-12" id="PRB">
+          <h3>Prussian Blue</h3>
+        </div>
+        <div class="color-item col-12" id="SG">
+          <h3>Sap Green</h3>
+        </div>
+
+        <div class="color-item col-12" id="VDB">
+          <h3 style="font-size: large">Van-dyke Brown</h3>
+        </div>
+        <div class="color-item col-12" id="DS">
+          <h3>Dark Sienna</h3>
+        </div>
+        <div class="color-item col-12" id="TW">
+          <h3>Titatnium White</h3>
+        </div>
+        <div class="color-item col-12" id="MB">
+          <h3>Midnight Black</h3>
+        </div>
     </div>
   </div>
 </body>
