--- a/hmwrk_3/index.html
+++ b/hmwrk_3/index.html
@@ -40,9 +40,8 @@
       <article class="col-1">
         <h3>The old Mill</h3>
         <img src="https://www.twoinchbrush.com/images/painting264.webp" alt="an old mill sits on a river">
-        <p>K9 squeak toy k9 dog bowl milk bone sit pretty squirrel sit. Jump dog bowl shake bring it leap Morkie growl
-          take it, fetch puppy bring it vet. Rottweiler bulldog play dead tennis ball, dog bone lab puppies take it
-          peanut butter tail.</p>
+        <p>Buildings are a rare sight, but this one sure is impressive. There are interesting water effects on the water
+          wheel</p>
         <p><a href="https://www.twoinchbrush.com/painting/the-old-mill" target="_blank">Read more &gt;&gt;</a></p>
       </article>
 
@@ -70,24 +69,23 @@
         <p>an interesting change from mountains and woods</p>
       </article>
       <article class="col-3">
-        <h3>shades of grey</h3>
-        <img src="https://www.twoinchbrush.com/images/painting272.webp" alt="shades of grey">
-        <p>
-          Ross made this painting at the behest of a man who claimed he could never paint because he was color blind. As the title of the piece suggests,
-          shades of grey only features grey tones. 
-        </p>
-        <p><a href="https://www.twoinchbrush.com/painting/shades-of-grey" target="_blank">Read more &gt;&gt;</a></p>
-
+        <h3> Western Expanse</h3>
+        <img src="https://www.twoinchbrush.com/images/painting227.webp" alt="wester expanse">
+        <p>The title of this painting harkens pack to pioneer times. I imagine those first settlers witnessed lots of vistas like this.</p>
+        <p><a href="https://www.twoinchbrush.com/painting/western-expanse" target="_blank">Read more &gt;&gt;</a></p>
       </article>
     </div>
     <!-- row 4: one column -->
     <div class="row">
       <article class="col-4">
-        <h3> Western Expanse</h3>
-        <img src="https://www.twoinchbrush.com/images/painting227.webp" alt="wester expanse">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ex totam exercitationem numquam ad iusto dolore repellat, incidunt molestiae nesciunt, nam asperiores. Nisi dolorum velit maxime sunt voluptatum aliquid libero dolore tenetur fugiat molestiae, quasi labore exercitationem dolor, veritatis quaerat perferendis voluptate!</p>
-        <p><a href="https://www.twoinchbrush.com/painting/western-expanse" target="_blank">Read more &gt;&gt;</a></p>
 
+        <img src="https://www.twoinchbrush.com/images/painting272.webp" alt="shades of grey">
+        <p>
+          Ross made this painting at the behest of a man who claimed he could never paint because he was color blind. As
+          the title of the piece suggests,
+          shades of grey only features grey tones.
+        </p>
+        <p><a href="https://www.twoinchbrush.com/painting/shades-of-grey" target="_blank">Read more &gt;&gt;</a></p>
       </article>
     </div>
     <!-- row 5, 1-2-1 individual boxes -->
@@ -95,65 +93,69 @@
       <article class="col-1">
         <h3>Serenity</h3>
         <img src="https://www.twoinchbrush.com/images/painting20.webp" alt="Serenity">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem cum enim possimus! Rerum assumenda perferendis vitae possimus inventore et incidunt ipsum doloremque facilis nemo?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem cum enim possimus! Rerum assumenda
+          perferendis vitae possimus inventore et incidunt ipsum doloremque facilis nemo?</p>
         <p><a href="https://www.twoinchbrush.com/painting/serenity" target="_blank">Read more &gt;&gt;</a></p>
       </article>
       <article class="col-half">
         <h3>Under Pastel Skies</h3>
         <img src="https://www.twoinchbrush.com/images/painting362.webp" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque optio, facere temporibus quibusdam quae, quaerat voluptate numquam consequatur a id corrupti asperiores fugiat? Numquam veniam rem aliquid tempore officia minima error est?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque optio, facere temporibus quibusdam quae,
+          quaerat voluptate numquam consequatur a id corrupti asperiores fugiat? Numquam veniam rem aliquid tempore
+          officia minima error est?</p>
         <p><a href="https://www.twoinchbrush.com/painting/under-pastel-skies" target="_blank">Read more &gt;&gt;</a></p>
       </article>
       <article class="col-1">
         <h3>Rolling Hills</h3>
         <img src="https://www.twoinchbrush.com/images/painting124.webp" alt="Rolling Hills">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit laboriosam, maiores et animi modi quo est minima, eveniet, aut fugit reprehenderit tempora facere atque!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit laboriosam, maiores et animi modi quo est
+          minima, eveniet, aut fugit reprehenderit tempora facere atque!</p>
         <p><a href="https://www.twoinchbrush.com/painting/rolling-hills" target="_blank">Read more &gt;&gt;</a></p>
       </article>
     </div>
     <h2 id="color-palette">Colors Used For These Paintings</h2>
     <div class="row">
-        <div class="color-item col-12" id="AC">
-          <h3 style="font-size: large;">Alizarin Crimson</h3>
-        </div>
-        <div class="color-item col-12" id="BR">
-          <h3>Bright Red</h3>
-        </div>
-        <div class="color-item col-12" id="CY">
-          <h3>Cad Yellow</h3>
-        </div>
-        <div class="color-item col-12" id="YO">
-          <h3>Yellow Ochre</h3>
-        </div>
+      <div class="color-item col-12" id="AC">
+        <h3 style="font-size: large;">Alizarin Crimson</h3>
+      </div>
+      <div class="color-item col-12" id="BR">
+        <h3>Bright Red</h3>
+      </div>
+      <div class="color-item col-12" id="CY">
+        <h3>Cad Yellow</h3>
+      </div>
+      <div class="color-item col-12" id="YO">
+        <h3>Yellow Ochre</h3>
+      </div>
 
-        <div class="color-item col-12" id="IY">
-          <h3>Indian Yellow</h3>
-        </div>
-        <div class="color-item col-12" id="PB">
-          <h3>Pthalo Blue</h3>
-        </div>
-        <div class="color-item col-12" id="PG">
-          <h3>Pthalo Green</h3>
-        </div>
-        <div class="color-item col-12" id="PRB">
-          <h3>Prussian Blue</h3>
-        </div>
-        <div class="color-item col-12" id="SG">
-          <h3>Sap Green</h3>
-        </div>
+      <div class="color-item col-12" id="IY">
+        <h3>Indian Yellow</h3>
+      </div>
+      <div class="color-item col-12" id="PB">
+        <h3>Pthalo Blue</h3>
+      </div>
+      <div class="color-item col-12" id="PG">
+        <h3>Pthalo Green</h3>
+      </div>
+      <div class="color-item col-12" id="PRB">
+        <h3>Prussian Blue</h3>
+      </div>
+      <div class="color-item col-12" id="SG">
+        <h3>Sap Green</h3>
+      </div>
 
-        <div class="color-item col-12" id="VDB">
-          <h3 style="font-size: large">Van-dyke Brown</h3>
-        </div>
-        <div class="color-item col-12" id="DS">
-          <h3>Dark Sienna</h3>
-        </div>
-        <div class="color-item col-12" id="TW">
-          <h3>Titatnium White</h3>
-        </div>
-        <div class="color-item col-12" id="MB">
-          <h3>Midnight Black</h3>
-        </div>
+      <div class="color-item col-12" id="VDB">
+        <h3 style="font-size: large">Van-dyke Brown</h3>
+      </div>
+      <div class="color-item col-12" id="DS">
+        <h3>Dark Sienna</h3>
+      </div>
+      <div class="color-item col-12" id="TW">
+        <h3>Titatnium White</h3>
+      </div>
+      <div class="color-item col-12" id="MB">
+        <h3>Midnight Black</h3>
+      </div>
     </div>
   </div>
 </body>
